[package]
edition = "2021"
name = "error_occurence"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.9"
syn = "1.0.75"

proc_macro_helpers = {path = "../proc_macro_helpers"}
enum_extension = {path = "../enum_extension"}
strum = "0.24.1"
strum_macros = "0.24.3"
convert_case = "0.6.0"